tests/paczka1/fuzzy1/70641198.err
Error in line 4: ppWz5utZc S906 69,6
Error in line 7: ppWz5utZc S780 52,0
Error in line 15: n1UMixLkn S686 99,0
Error in line 20: n1UMixLkn S906 24,3
